--- a/web/src/styles/pages/usuario-map.css
+++ b/web/src/styles/pages/usuario-map.css
@@ -65,7 +65,7 @@
  }
 
  #page-map .create-usuario:hover{
-     background: #17d6ed;
+    background: #96feff;
  }
 
  #page-map .map-popup .leaflet-popup-content-wrapper{
