--- a/web/src/styles/pages/usuario.css
+++ b/web/src/styles/pages/usuario.css
@@ -67,7 +67,7 @@
 
 .usuario-details .images {
   display: grid;
-  grid-template-columns: repeat(6 ,1fr);
+  grid-template-columns: repeat(6,1fr);
   column-gap: 16px;
 
   margin: 16px 40px 0;
@@ -105,6 +105,14 @@
   font-size: 54px;
   line-height: 54px;
   margin-bottom: 8px;
+}
+
+.div-change{
+  display: grid;
+  grid-template-columns: repeat(6,2fr);
+  column-gap: 16px;
+
+  margin: 16px 40px 0;
 }
 
 .usuario-details .usuario-details-content p {
