--- a/web/src/styles/pages/landing.css
+++ b/web/src/styles/pages/landing.css
@@ -12,7 +12,7 @@
     position: relative;
 
     width: 100%;
-    max-width: 1100px;
+    max-width: 1200px;
 
     height: 100%;
     max-height: 680px;
@@ -34,35 +34,48 @@
     font-size: 20px;
 }
 
+ .content-footer{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    margin-left: 1050px;
+    margin-bottom: auto;
+    font-size: 20px;
+}
+
 #page-landing .content-wrapper main{
    max-width: 350px;
 }
 
 #page-landing .content-wrapper main h1{
+    margin-top: 80px;
     font-size: 76px;
     font-weight: 900;
     line-height: 70px;
 }
 
 #page-landing .content-wrapper main p{
-   margin-top: 50px;
+   margin-top: 80px;
    font-size: 24px;
    line-height: 34px;
 }
+
 
 .content-wrapper .location{
     position: absolute;
     right: 0;
     top: 0;
     margin-top: 20px;
+    height: 30px;
 
-    font-size: 24px;
+    font-size: 20px;
     line-height: 34px;
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 
     text-align: right;
+    align-items: flex-end;
 }
 
 .content-wrapper .location strong{
@@ -70,12 +83,12 @@
 }
 
 .content-wrapper .enter-app{
-    position: absolute;
+    position: relative;
     right: 0;
     bottom:0;
 
     width: 80px;
-    height: 80px;
+    height: 30px;
     background: #17d6ed;
     border-radius: 30px;
 
